# data-pipeline

./: .env  .env.example  .gitignore  HarvestOperations.db  README  README.md  config.py  main.py  pyproject.toml  requirements.txt  run_ingestion.bat
config/: settings.py
data/0_raw data/: All_Positions20260302.csv  All_Positions20260303.csv  HARVEST_20260219_1801.csv.ndm01  PLF_Positions20260225.csv  PLF_Positions20260302.csv  Performance - Calculation_January TC .xlsx  bronze_holdings.csv  bronze_metadata.csv
data/raw/: All_Positions20260220.csv  All_Positions20260220.csvhaha.csv  All_Positions20260302.csv_mended  All_Positions20260313.csv  All_Positions20260316.csv  HARVEST_20260219_1351.csv.ndm01  Harvest Price File -02182026.XLS  Harvest_BSKT.20260224.CSV  Harvest_BSKT.20260225.CSV  Harvest_BSKT.20260226.CSV  Harvest_BSKT.20260227.CSV  Harvest_BSKT.20260302.CSV  Harvest_BSKT.20260303.CSV  (+62 more)
docs/: Conventions.md
etl_pipeline.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: PLF_Positions20260319.csv  all_position_agg.csv  api_pulls.ipynb  bloomberg_test.ipynb  bloombergtest.ipynb  diagnose_test.py  exploration.ipynb  mail_test.ipynb  mail_test.py  mft_test.ipynb  other.ipynb  random.ipynb  read_logs.ipynb  testing.csv  testing_cleaned.csv  testing_plf_logic.ipynb
src/: 1_extractor.py  2_cleaner.py  clean.py  cleaner.py  dataframe_cleaner.py  deltalake_writer.py  extract.py  ingestor.py  initializer.py  loader.py  parsers.py  silver_transformer.py  transformer.py  validator.py
tests/: test_clean.py  test_cleaner_comprehensive.py  test_parsers.py
(+11 files in other folders)
